--- a/index.htm
+++ b/index.htm
@@ -11,15 +11,15 @@ text-decoration: none;
 }
 
 
-a: link {
+a:link {
    color: #FF0000;
    background-color: transparent;
    text-decoration: none;
 }
 
 
-a: visited {
-   color" #008000;
+a:visited {
+   color: #008000;
    background-color: transparent;
    text-decoration: none;
 }
